# andre

./: .env.example  .gitignore  AGENTS.md  CHANGELOG-resurrect.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Makefile  README.md  SECURITY.md  analytics.py  app.py  build-info.yaml  config.example.yaml  config.py  config.yaml  db.py  docker-compose.yaml  dominator.py  fabfile.py  flask_googlefed.py  gunicorn_config.py  history.py  master_player.py  migrate_keys.py  nests.py  requirements.txt  run.py  service-info-andre.yaml  service-info-highlife.yaml  service-info.yaml  setup.py  slack.py  test_api_migration.py
db_schema/: 1.sql
docs/: ANALYTICS_PLAN.md  CHANGELOG.md  CLOUD_HOSTING_PLAN.md  DEPLOYMENT_REFERENCE.md  GETTING_STARTED.md  NESTS_DECISION_LOG.md  NESTS_HANDOFF_TEMPLATE.md  NESTS_PLAN.md  NESTS_TASKS.md  NESTS_TEST_SPEC.md  NEST_NAMES_PLAN.md  api-usage-and-backoff.md  bender-queue-logic.md  changelog.md  cloud-hosting-plan.md  deployment-reference.md  echonest-sync-phase2.md  echonest-sync-plan.md  enhanced-paused-state-plan.md  getting-started.md  (+5 more)
echonest-sync/: CLAUDE.md  README.md  pyproject.toml
echonest-sync/docs/: apple-developer-id.md  cli.md  features.md  getting-started.md  homebrew-plan.md
echonest-sync/src/echonest_sync/: __main__.py  app.py  audio.py  autostart.py  config.py  ipc.py  miniplayer.py  onboarding.py  player.py  search.py  sync.py  tray_mac.py  tray_win.py  updater.py
echonest-sync/tests/: test_autostart.py  test_config_dir.py  test_ipc.py  test_onboarding.py  test_override.py  test_snooze.py  test_sync.py
(+39 files in other folders)
