[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echonest-sync"
version = "0.5.0"
description = "Desktop agent that syncs your local Spotify with an EchoNest server"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "sseclient-py",
    "click",
    "pyyaml",
    "keyring",
    "pystray",
    "pillow",
]

[project.optional-dependencies]
mac = ["rumps"]

[project.scripts]
echonest-sync = "echonest_sync.cli:main"
echonest-sync-app = "echonest_sync.app:main"

[tool.setuptools.packages.find]
where = ["src"]
